[metadata]
name = htsget_app
version = attr: 0.1.4
url = https://github.com/CanDIG/htsget_app
description = CanDIG htsget API that follows the htsget standard
long_description = file: README.rst
keywords = htsget_app
classifiers =
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Flask
    Flask-Cors
    minio
    pysam
    sqlalchemy
    connexion
tests_require =
	pytest